hypr: new keybinds and other small nix tweaks

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -9,14 +9,18 @@ bind = $mod,            x,          killactive,
 bind = $mod,            $enter, exec,   kitty
 # bind = $mod SHIFT,      $enter, exec,   [noanim]rofi -show drun -config $HOME/.config/rofi/main.rasi
 bind = $mod SHIFT,      $enter, exec,   albert show
-bind = $mod CONTROL,    s,      exec,   flameshot gui
+# bind = $mod SHIFT,      s,      exec,   grim -g "$(slurp -w 0 -d)" - | wl-copy
+bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui
+bind = $mod CONTROL,    s,      exec,   wl-paste | swappy -f -
+bind = $mod CONTROL,    e,      exec,   [float]nemo
 bind = $mod,            b,      exec,   firefox-ff
 bind = $mod SHIFT,      m,      exec,   [workspace 5]focus-mail
 bind = $mod CONTROL,    m,      exec,   [workspace 6;tiled]focus-spotify
 bind = $mod SHIFT,      g,      exec,   firefox "https://github.com/e-cal"
 bind = $mod SHIFT,      c,      exec,   hyprpicker -a
+bind = $mod SHIFT,      n,      exec,   obsidian-nb
 
-bind = $mod CONTROL,    e,      exec,   eyes toggle
+# bind = $mod CONTROL,    e,      exec,   eyes toggle
 
 # scratchpads
 bind = $mod CONTROL,    $enter, exec, [workspace special:scratch]tm startup scratch
@@ -24,6 +28,8 @@ bind = $mod CONTROL,    $enter, togglespecialworkspace, scratch
 
 bind = $mod SHIFT,      b,      exec, [noanim; workspace special:browser]firefox-scratch
 bind = $mod SHIFT,      b,      togglespecialworkspace, browser
+bind = $mod CONTROL,    b,      exec, [noanim; workspace special:browser]firefox-scratch
+bind = $mod CONTROL,    b,      togglespecialworkspace, browser
 #
 # bind = $mod, g, exec, [noanim; workspace special:ask]firefox-scratch ask
 # bind = $mod, g, togglespecialworkspace, ask
@@ -73,27 +79,27 @@ bind = $mod SHIFT, t, movetoworkspacesilent, 5
 # bind = $mod SHIFT, o, movetoworkspacesilent, 9
 # bind = $mod SHIFT, p, movetoworkspacesilent, 10
 
-bind = $mod, plus, exec, focusws 1
+bind = $mod SHIFT, equal, exec, focusws 1
 bind = $mod, bracketleft, exec, focusws 2
-bind = $mod, braceleft, exec, focusws 3
-bind = $mod, parenleft, exec, focusws 4
-bind = $mod, numbersign, exec, focusws 5
+bind = $mod SHIFT, bracketleft, exec, focusws 3
+bind = $mod SHIFT, 9, exec, focusws 4
+bind = $mod SHIFT, 3, exec, focusws 5
 bind = $mod, equal, exec, focusws 6
-bind = $mod, parenright, exec, focusws 7
-bind = $mod, braceright, exec, focusws 8
+bind = $mod SHIFT, 0, exec, focusws 7
+bind = $mod SHIFT, bracketright, exec, focusws 8
 bind = $mod, bracketright, exec, focusws 9
-bind = $mod, asterisk, exec, focusws 10
+bind = $mod SHIFT, 8, exec, focusws 10
 
-bind = $mod SHIFT, plus, movetoworkspacesilent, 1
-bind = $mod SHIFT, bracketleft, movetoworkspacesilent, 2
-bind = $mod SHIFT, braceleft, movetoworkspacesilent, 3
-bind = $mod SHIFT, parenleft, movetoworkspacesilent, 4
-bind = $mod SHIFT, numbersign, movetoworkspacesilent, 5
-bind = $mod SHIFT, equal, movetoworkspacesilent, 6
-bind = $mod SHIFT, parenright, movetoworkspacesilent, 7
-bind = $mod SHIFT, braceright, movetoworkspacesilent, 8
-bind = $mod SHIFT, bracketright, movetoworkspacesilent, 9
-bind = $mod SHIFT, asterisk, movetoworkspacesilent, 10
+bind = $mod, 1, movetoworkspacesilent, 1
+bind = $mod, 2, movetoworkspacesilent, 2
+bind = $mod, 3, movetoworkspacesilent, 3
+bind = $mod, 4, movetoworkspacesilent, 4
+bind = $mod, 5, movetoworkspacesilent, 5
+bind = $mod, 6, movetoworkspacesilent, 6
+bind = $mod, 7, movetoworkspacesilent, 7
+bind = $mod, 8, movetoworkspacesilent, 8
+bind = $mod, 9, movetoworkspacesilent, 9
+bind = $mod, 0, movetoworkspacesilent, 10
 
 # Floats
 binde = $mod, Right, moveactive, 30 0
