--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -1,13 +1,12 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor = eDP-1,preffered,0x0,1
-monitor = DP-2,2560x1440@144,auto,1
-monitor = ,1920x1080@75,1920x0,1
-monitor = ,preffered,auto,1
+# monitor = ,preffered,auto,1 # second monitor fallback (lower has higher priority for unnamed)
+monitor = eDP-1,preffered,0x0,1 # laptop screen
+monitor = DP-4,2560x1440@144,auto,1 # main dell monitor
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = code
+    kb_layout = us
     kb_variant=
     kb_model=
     # https://gist.github.com/jatcwang/ae3b7019f219b8cdc6798329108c9aee
