--- a/global/dot-config/hypr/env.conf
+++ b/global/dot-config/hypr/env.conf
@@ -2,3 +2,5 @@ env=XCURSOR_SIZE,24
 env=XDG_CURRENT_DESKTOP,Hyprland
 env=XDG_SESSION_TYPE,wayland
 env=XDG_SESSION_DESKTOP,Hyprland
+env=WLR_NO_HARDWARE_CURSORS,1
+env=NIXOS_OZONE_WL,1
