flameshot: auto generated fixes

--- a/global/dot-config/flameshot/flameshot.ini
+++ b/global/dot-config/flameshot/flameshot.ini
@@ -1,5 +1,5 @@
 [General]
-buttons=@Variant(\0\0\0\x7f\0\0\0\vQList<int>\0\0\0\0\xe\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\x12\0\0\0\xf\0\0\0\x13\0\0\0\b\0\0\0\t\0\0\0\x10\0\0\0\x11)
+buttons=@Variant(\0\0\0\x7f\0\0\0\vQList<int>\0\0\0\0\xf\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\x12\0\0\0\xf\0\0\0\x13\0\0\0\b\0\0\0\t\0\0\0\x10\0\0\0\n\0\0\0\x11)
 contrastOpacity=191
 disabledTrayIcon=true
 drawColor=#f38ba8
@@ -11,7 +11,6 @@ savePath=/home/ecal/Downloads/mv
 savePathFixed=false
 showDesktopNotification=false
 showHelp=false
-showSelectionGeometry=4
 showSidePanelButton=true
 showStartupLaunchMessage=false
 startupLaunch=false
@@ -43,10 +42,6 @@ TYPE_RESIZE_UP=Shift+k
 TYPE_SAVE=Ctrl+S
 TYPE_SELECTION=S
 TYPE_SELECT_ALL=Ctrl+A
-TYPE_SYM_RESIZE_DOWN=Ctrl+Shift+j
-TYPE_SYM_RESIZE_LEFT=Ctrl+Shift+h
-TYPE_SYM_RESIZE_RIGHT=Ctrl+Shift+l
-TYPE_SYM_RESIZE_UP=Ctrl+Shift+k
 TYPE_TEXT=T
 TYPE_TOGGLE_PANEL=Space
 TYPE_UNDO=Ctrl+Z
