kbd: cleanup and no more submodule

--- a/shared/.config/hypr/startup.conf
+++ b/shared/.config/hypr/startup.conf
@@ -1,6 +1,5 @@
 # set cursor theme
-exec-once=hyprctl setcursor Sweet-cursors 24
-exec-once=gsettings set org.gnome.desktop.interface cursor-theme 'Sweet-cursors'
+exec-once=hyprctl setcursor "Catppuccin-Macchiato-Dark-Cursors" 24
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # disable middle click paste
