tmux: keybind to open chat

--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -86,7 +86,7 @@ bind-key B break-pane -d
 
 bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
-bind-key Tab next-window
+bind-key Tab switch-client -l
 
 bind-key w choose-window
 bind-key -n "M-+" select-window -t 1
@@ -125,10 +125,9 @@ bind-key t run-shell "toggleterm h"
 bind-key T run-shell "toggleterm v"
 bind-key ? run-shell 'tmux neww -n "ask" zsh -c "ask;zsh"'
 bind-key . run-shell "tmux display-popup -E cfgdirs tmux"
-bind-key c run-shell "tm config"
-bind-key C run-shell "tm attach cfg"
+# bind-key c split-window -v -c '#{pane_current_path}' 'nvim -c GpChatNew'
+bind-key c split-window -h -c '#{pane_current_path}' 'nvim -c GpChatNew'
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (cd ~/.dotfiles && lazygit)"
 bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
-bind-key \\ switch-client -l
 
 run "$HOME/.config/tmux/theme"
