--- a/shared/.config/hypr/devices.conf
+++ b/shared/.config/hypr/devices.conf
@@ -2,8 +2,12 @@
 
 monitor = ,preffered,auto,1 # second monitor fallback (lower has higher priority for unnamed)
 monitor = eDP-1,preffered,0x0,1 # laptop screen
-monitor = DP-2,2560x1440@144,auto,1 # main dell monitor
-monitor = DP-1,preffered,0x0,1 # second monitor
+# main dell monitor
+monitor = DP-2,2560x1440@144,auto,1
+monitor = DP-4,2560x1440@144,auto,1
+# second monitor
+monitor = DP-1,preffered,0x0,1
+monitor = DP-5,preffered,0x0,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
