--- a/shared/.config/tmux/server.conf
+++ b/shared/.config/tmux/server.conf
@@ -1,5 +1,3 @@
-set -g default-terminal "xterm-kitty"
-
 set -g history-limit 10000
 
 set -g base-index 1
@@ -15,7 +13,7 @@ set -g set-clipboard external
 
 # Key Bindings
 # prefix: C-Space
-set -g prefix C-@
+# set -g prefix C-@
 
 # command to check if in nvim
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -113,16 +111,16 @@ bind-key q run-shell "tm attach main; tm kill $(tmux display-message -p '#S')"
 bind-key Q kill-window
 bind-key w kill-pane
 
-bind-key Enter display-popup -E "tm"
-bind-key N display-popup -E "tm new"
+# bind-key Enter display-popup -E "tm"
+# bind-key N display-popup -E "tm new"
 bind-key S run-shell "tmux choose-session"
 bind-key t run-shell "toggleterm h"
 bind-key T run-shell "toggleterm v"
 bind-key ? run-shell 'tmux neww -n "ask" zsh -c "ask;zsh"'
 bind-key . run-shell "tmux display-popup -E cfgdirs tmux"
 # bind-key c split-window -v -c '#{pane_current_path}' 'nvim -c GpChatNew'
-bind-key c split-window -h -c '#{pane_current_path}' 'nvim -c GpChatNew'
-bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (cd ~/.dotfiles && lazygit)"
+# bind-key c split-window -h -c '#{pane_current_path}' 'nvim -c GpChatNew'
+# bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (cd ~/.dotfiles && lazygit)"
 bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
 
-run "$HOME/.config/tmux/theme"
+# run "$HOME/.config/tmux/theme"
