code: more settings

--- a/shared/.config/Code/User/settings.json
+++ b/shared/.config/Code/User/settings.json
@@ -38,5 +38,6 @@
   "github.copilot.advanced": {
 
   },
-  "editor.suggest.selectionMode": "never"
+  "editor.suggest.selectionMode": "never",
+  "notebook.output.scrolling": true
 }
