code: merge settings

--- a/shared/.config/Code/User/settings.json
+++ b/shared/.config/Code/User/settings.json
@@ -39,5 +39,6 @@
 
   },
   "editor.suggest.selectionMode": "never",
-  "notebook.output.scrolling": true
+  "notebook.output.scrolling": true,
+  "remote.SSH.connectTimeout": 30
 }
