hypr: sync, not sure what changed in main conf

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -40,6 +40,7 @@ bind = $mod,            f,      togglefloating,
 bind = $mod SHIFT,      f,      fullscreen, 
 bind = $mod CONTROL,    f,      exec,   togglebar
 bind = $mod ALT,        f,      fakefullscreen, 
+bind = $mod CONTROL,    p,      pseudo, 
 
 bind = $mod,            h,      movefocus, l
 bind = $mod,            l,      movefocus, r
@@ -79,16 +80,16 @@ bind = $mod SHIFT, t, movetoworkspacesilent, 5
 # bind = $mod SHIFT, o, movetoworkspacesilent, 9
 # bind = $mod SHIFT, p, movetoworkspacesilent, 10
 
-bind = $mod SHIFT, equal, exec, focusws 1
-bind = $mod, bracketleft, exec, focusws 2
-bind = $mod SHIFT, bracketleft, exec, focusws 3
-bind = $mod SHIFT, 9, exec, focusws 4
-bind = $mod SHIFT, 3, exec, focusws 5
-bind = $mod, equal, exec, focusws 6
-bind = $mod SHIFT, 0, exec, focusws 7
-bind = $mod SHIFT, bracketright, exec, focusws 8
-bind = $mod, bracketright, exec, focusws 9
-bind = $mod SHIFT, 8, exec, focusws 10
+bind = $mod SHIFT,  equal,          exec, focusws 1
+bind = $mod,        bracketleft,    exec, focusws 2
+bind = $mod SHIFT,  bracketleft,    exec, focusws 3
+bind = $mod SHIFT,  9,              exec, focusws 4
+bind = $mod SHIFT,  3,              exec, focusws 5
+bind = $mod,        equal,          exec, focusws 6
+bind = $mod SHIFT,  0,              exec, focusws 7
+bind = $mod SHIFT,  bracketright,   exec, focusws 8
+bind = $mod,        bracketright,   exec, focusws 9
+bind = $mod SHIFT,  8,              exec, focusws 10
 
 bind = $mod, 1, movetoworkspacesilent, 1
 bind = $mod, 2, movetoworkspacesilent, 2
