hypr: add lenovo mouse profile

--- a/shared/.config/hypr/devices.conf
+++ b/shared/.config/hypr/devices.conf
@@ -46,3 +46,7 @@ device:at-translated-set-2-keyboard {
 device:razer-atheris-mouse {
     sensitivity = 0.1
 }
+
+device:lenovo-lenovo-usb-a-unified-pairing-receiver-1 {
+    sensitivity = -0.2
+}
