hypr: merge changes to binds

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -3,13 +3,12 @@
 $mod = SUPER
 $enter = Return
 
-bind = $mod,            x,          killactive, 
+bind = $mod,            x,      killactive, 
 
 # open stuff
 bind = $mod,            $enter, exec,   kitty
-# bind = $mod SHIFT,      $enter, exec,   [noanim]rofi -show drun -config $HOME/.config/rofi/main.rasi
 bind = $mod SHIFT,      $enter, exec,   albert show
-# bind = $mod SHIFT,      s,      exec,   grim -g "$(slurp -w 0 -d)" - | wl-copy
+bind = $mod,            o,      exec,   albert show
 bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui
 bind = $mod CONTROL,    s,      exec,   wl-paste | swappy -f -
 bind = $mod CONTROL,    e,      exec,   [float]nemo
@@ -20,27 +19,13 @@ bind = $mod SHIFT,      g,      exec,   firefox "https://github.com/e-cal"
 bind = $mod SHIFT,      c,      exec,   hyprpicker -a
 bind = $mod SHIFT,      n,      exec,   obsidian-nb
 
-# bind = $mod CONTROL,    e,      exec,   eyes toggle
-
-# scratchpads
-bind = $mod CONTROL,    $enter, exec, [workspace special:scratch]tm startup scratch
-bind = $mod CONTROL,    $enter, togglespecialworkspace, scratch
-
-bind = $mod SHIFT,      b,      exec, [noanim; workspace special:browser]firefox-scratch
-bind = $mod SHIFT,      b,      togglespecialworkspace, browser
-bind = $mod CONTROL,    b,      exec, [noanim; workspace special:browser]firefox-scratch
-bind = $mod CONTROL,    b,      togglespecialworkspace, browser
-#
-# bind = $mod, g, exec, [noanim; workspace special:ask]firefox-scratch ask
-# bind = $mod, g, togglespecialworkspace, ask
-
 # Layout
-bind = $mod,            tab,    togglesplit, 
 bind = $mod,            f,      togglefloating,
-bind = $mod SHIFT,      f,      fullscreen, 
 bind = $mod CONTROL,    f,      exec,   togglebar
+bind = $mod SHIFT,      f,      fullscreen, 
 bind = $mod ALT,        f,      fakefullscreen, 
 bind = $mod CONTROL,    p,      pseudo, 
+bind = $mod,            tab,    togglesplit, 
 
 bind = $mod,            h,      movefocus, l
 bind = $mod,            l,      movefocus, r
@@ -56,6 +41,15 @@ bind = $mod CONTROL,    h,      swapwindow, l
 bind = $mod CONTROL,    l,      swapwindow, r
 bind = $mod CONTROL,    k,      swapwindow, u
 bind = $mod CONTROL,    j,      swapwindow, d
+
+# scratchpads
+bind = $mod CONTROL,    $enter, exec, [workspace special:scratch]tm startup scratch
+bind = $mod CONTROL,    $enter, togglespecialworkspace, scratch
+
+bind = $mod SHIFT,      b,      exec, [noanim; workspace special:browser]firefox-scratch
+bind = $mod SHIFT,      b,      togglespecialworkspace, browser
+bind = $mod CONTROL,    b,      exec, [noanim; workspace special:browser]firefox-scratch
+bind = $mod CONTROL,    b,      togglespecialworkspace, browser
 
 # Workspaces
 bind = $mod, q, exec, focusws 1
