--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -52,6 +52,54 @@ bind = $mod CONTROL,    b,      exec, [noanim; workspace special:browser]firefox
 bind = $mod CONTROL,    b,      togglespecialworkspace, browser
 
 # Workspaces
+
+# main
+# bind = $mod SHIFT,  equal,          exec, focusws 1
+# bind = $mod,        bracketleft,    exec, focusws 2
+# bind = $mod SHIFT,  bracketleft,    exec, focusws 3
+# bind = $mod SHIFT,  9,              exec, focusws 4
+# bind = $mod SHIFT,  3,              exec, focusws 5
+# bind = $mod,        equal,          exec, focusws 6
+# bind = $mod SHIFT,  0,              exec, focusws 7
+# bind = $mod SHIFT,  bracketright,   exec, focusws 8
+# bind = $mod,        bracketright,   exec, focusws 9
+# bind = $mod SHIFT,  8,              exec, focusws 10
+#
+# bind = $mod, 1, movetoworkspacesilent, 1
+# bind = $mod, 2, movetoworkspacesilent, 2
+# bind = $mod, 3, movetoworkspacesilent, 3
+# bind = $mod, 4, movetoworkspacesilent, 4
+# bind = $mod, 5, movetoworkspacesilent, 5
+# bind = $mod, 6, movetoworkspacesilent, 6
+# bind = $mod, 7, movetoworkspacesilent, 7
+# bind = $mod, 8, movetoworkspacesilent, 8
+# bind = $mod, 9, movetoworkspacesilent, 9
+# bind = $mod, 0, movetoworkspacesilent, 10
+
+# inverted
+bind = $mod, 1, exec, focusws 1
+bind = $mod, 2, exec, focusws 2
+bind = $mod, 3, exec, focusws 3
+bind = $mod, 4, exec, focusws 4
+bind = $mod, 5, exec, focusws 5
+bind = $mod, 6, exec, focusws 6
+bind = $mod, 7, exec, focusws 7
+bind = $mod, 8, exec, focusws 8
+bind = $mod, 9, exec, focusws 9
+bind = $mod, 0, exec, focusws 10
+
+bind = $mod SHIFT,  equal,          movetoworkspacesilent, 1
+bind = $mod,        bracketleft,    movetoworkspacesilent, 2   
+bind = $mod SHIFT,  bracketleft,    movetoworkspacesilent, 3
+bind = $mod SHIFT,  9,              movetoworkspacesilent, 4
+bind = $mod SHIFT,  3,              movetoworkspacesilent, 5
+bind = $mod,        equal,          movetoworkspacesilent, 6
+bind = $mod SHIFT,  0,              movetoworkspacesilent, 7
+bind = $mod SHIFT,  bracketright,   movetoworkspacesilent, 8
+bind = $mod,        bracketright,   movetoworkspacesilent, 9
+bind = $mod SHIFT,  8,              movetoworkspacesilent, 10
+
+# no nums
 bind = $mod, q, exec, focusws 1
 bind = $mod, w, exec, focusws 2
 bind = $mod, e, exec, focusws 3
@@ -74,27 +122,6 @@ bind = $mod SHIFT, t, movetoworkspacesilent, 5
 # bind = $mod SHIFT, o, movetoworkspacesilent, 9
 # bind = $mod SHIFT, p, movetoworkspacesilent, 10
 
-bind = $mod SHIFT,  equal,          exec, focusws 1
-bind = $mod,        bracketleft,    exec, focusws 2
-bind = $mod SHIFT,  bracketleft,    exec, focusws 3
-bind = $mod SHIFT,  9,              exec, focusws 4
-bind = $mod SHIFT,  3,              exec, focusws 5
-bind = $mod,        equal,          exec, focusws 6
-bind = $mod SHIFT,  0,              exec, focusws 7
-bind = $mod SHIFT,  bracketright,   exec, focusws 8
-bind = $mod,        bracketright,   exec, focusws 9
-bind = $mod SHIFT,  8,              exec, focusws 10
-
-bind = $mod, 1, movetoworkspacesilent, 1
-bind = $mod, 2, movetoworkspacesilent, 2
-bind = $mod, 3, movetoworkspacesilent, 3
-bind = $mod, 4, movetoworkspacesilent, 4
-bind = $mod, 5, movetoworkspacesilent, 5
-bind = $mod, 6, movetoworkspacesilent, 6
-bind = $mod, 7, movetoworkspacesilent, 7
-bind = $mod, 8, movetoworkspacesilent, 8
-bind = $mod, 9, movetoworkspacesilent, 9
-bind = $mod, 0, movetoworkspacesilent, 10
 
 # Floats
 binde = $mod, Right, moveactive, 30 0
