--- a/shared/.config/hypr/devices.conf
+++ b/shared/.config/hypr/devices.conf
@@ -1,10 +1,12 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor = ,preffered,auto,1 # second monitor fallback (lower has higher priority for unnamed)
-monitor = eDP-1,preffered,0x0,1 # laptop screen
+monitor = ,1920x1080,auto,1 # second monitor fallback (lower has higher priority for unnamed)
+monitor = eDP-1,preffered,0x0,1.5 # laptop screen
 # main dell monitor
 monitor = DP-2,2560x1440@144,auto,1
 monitor = DP-4,2560x1440@144,auto,1
+# sam monitor
+# monitor = DP-3,1920x1080,auto,1
 # second monitor
 monitor = DP-1,preffered,0x0,1
 monitor = DP-5,preffered,0x0,1
