hypr: fullscreen screenshots

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -10,14 +10,15 @@ bind = $mod,            $enter, exec,   kitty
 bind = $mod SHIFT,      $enter, exec,   albert show
 bind = $mod,            o,      exec,   albert show
 bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui
-bind = $mod CONTROL,    s,      exec,   wl-paste | swappy -f -
+bind = $mod CONTROL,    s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot full
 bind = $mod CONTROL,    e,      exec,   [float]nemo
 bind = $mod,            b,      exec,   firefox-ff
 bind = $mod SHIFT,      m,      exec,   [workspace 5]focus-mail
 bind = $mod CONTROL,    m,      exec,   [workspace 6;tiled]focus-spotify
 bind = $mod SHIFT,      g,      exec,   firefox "https://github.com/e-cal"
 bind = $mod SHIFT,      c,      exec,   hyprpicker -a
-bind = $mod SHIFT,      n,      exec,   obsidian-nb
+bind = $mod SHIFT,      n,      exec,   obsidian --disable-gpu
+
 
 # Layout
 bind = $mod,            f,      togglefloating,
