--- a/shared/.config/albert.conf
+++ b/shared/.config/albert.conf
@@ -14,6 +14,10 @@ enabled=true
 [clipboard]
 enabled=true
 
+[files]
+enabled=true
+paths=@Invalid()
+
 [qmlboxmodel]
 windowPosition=@Point(2499 216)
 
@@ -37,4 +41,4 @@ showCentered=true
 showFallbacksOnEmpty=true
 systemShadow=true
 theme=Nord
-windowPosition=@Point(597 216)
+windowPosition=@Point(2517 216)
