hypr: update config

--- a/shared/.config/hypr/devices.conf
+++ b/shared/.config/hypr/devices.conf
@@ -33,22 +33,27 @@ input {
     }
 }
 
-device:beekeeb-piantor-pro-keyboard {
-    kb_layout=us
+device {
+    name = beekeeb-piantor-pro-keyboard 
+    kb_layout = us
 }
 
-device:syna2393:00-06cb:7a13-touchpad {
-    accel_profile = adaptive
+device {
+    name = syna2393:00-06cb:7a13-touchpad 
+        accel_profile = adaptive
 }
 
-device:at-translated-set-2-keyboard {
+device {
+    name = at-translated-set-2-keyboard 
     kb_options = caps:escape
 }
 
-device:razer-atheris-mouse {
+device {
+    name = razer-atheris-mouse 
     sensitivity = 0.1
 }
 
-device:lenovo-lenovo-usb-a-unified-pairing-receiver-1 {
+device {
+    name = lenovo-lenovo-usb-a-unified-pairing-receiver-1 
     sensitivity = -0.2
 }
