--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -1,5 +1,5 @@
 # No opacity on media
-windowrule=nofullscreenrequest,title:Picture\-in\-Picture
+windowrule=suppressevent fullscreen,title:Picture\-in\-Picture
 windowrule=noblur,title:Picture\-in\-Picture
 windowrule=opacity 1.0 override 1.0 override,title:Picture\-in\-Picture
 windowrule=opacity 1.0 override 1.0 override,title:.*YouTube.*
@@ -12,7 +12,7 @@ workspace=special:ask,gapsin:-50,gapsout:-50
 workspace=special:browser,gapsin:-50,gapsout:-50
 
 # Flameshot
-windowrule=nofullscreenrequest,flameshot
+windowrule=suppressevent fullscreen,flameshot
 windowrule=float,flameshot
 windowrule=monitor 1,flameshot
 windowrule=move 0 0,flameshot
