--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -245,5 +245,5 @@ gestures {
     workspace_swipe_min_speed_to_force = 30
     workspace_swipe_cancel_ratio = 0.3
     workspace_swipe_forever = false
-    workspace_swipe_numbered = false
+    # workspace_swipe_numbered = false
 }
