--- a/shared/.config/kitty/kitty.conf
+++ b/shared/.config/kitty/kitty.conf
@@ -12,14 +12,28 @@ window_padding_width 0 0.5 0 0.5
 # font
 # kitty +list-fonts --psnames
 
-# ttf-fantasque-nerd
-font_family             FantasqueSansM Nerd Font Regular
-bold_font               FantasqueSansM Nerd Font Bold
-italic_font             FantasqueSansM Nerd Font Italic
-bold_italic_font        FantasqueSansM Nerd Font Bold Italic
+# font_family             FantasqueSansM Nerd Font Regular
+# bold_font               FantasqueSansM Nerd Font Bold
+# italic_font             FantasqueSansM Nerd Font Italic
+# bold_italic_font        FantasqueSansM Nerd Font Bold Italic
+
+font_family             JetBrainsMono NF Regular
+bold_font               JetBrainsMono NF Bold
+italic_font             JetBrainsMono NF Italic
+bold_italic_font        JetBrainsMono NF Bold Italic
+
+font_features JetBrainsMonoNF-Regular +zero
+font_features JetBrainsMonoNF-Bold +zero
+font_features JetBrainsMonoNF-Italic +zero
+font_features JetBrainsMonoNF-BoldItalic +zero
+
+# font_family             CommitMono Nerd Font
+# bold_font               CommitMono Nerd Font Bold
+# italic_font             CommitMono Nerd Font Italic
+# bold_italic_font        CommitMono Nerd Font Bold Italic
 
 font_size               13
-disable_ligatures       never
+disable_ligatures       cursor # never, cursor, always
 force_ltr               yes
 
 # cursor
