--- a/shared/.config/starship.toml
+++ b/shared/.config/starship.toml
@@ -35,9 +35,6 @@ $env_var\
 $crystal\
 $lua\
 
-$git_commit\
-$git_state\
-$git_status\
 $jobs\
 
     $fill\
@@ -47,7 +44,9 @@ $cmd_duration\
 
 $directory\
 $git_branch\
-$gcloud\
+$git_commit\
+$git_state\
+$git_status\
 
         $line_break\
 
@@ -100,7 +99,7 @@ ahead = "󰐙 ×${count} "
 behind = "󰍷 ×${count} "
 diverged = "󰐙 ×${ahead_count} 󰍷 ×${behind_count} "
 modified = "󰏫 ×${count} "
-untracked = "󰈤 ×${count} "
+untracked = "󱀶 ×${count} "
 stashed = "󰆓 "
 staged = "󰈖 ×${count} "
 renamed = "󰈝 ×${count} "
@@ -148,8 +147,8 @@ unknown_indicator = " "
 format = "$indicator"
 
 [nix_shell]
-format = '[$symbol$state( \($name\))]($style) '
-symbol = '  '
+format = '[$symbol $name]($style) '
+symbol = "󱄅"
 
 [python]
 symbol = "󰌠 "
