hypr: fix monitor refresh rate

--- a/shared/.config/hypr/devices.conf
+++ b/shared/.config/hypr/devices.conf
@@ -3,12 +3,12 @@
 monitor = ,1920x1080,auto,1 # second monitor fallback (lower has higher priority for unnamed)
 monitor = eDP-1,preffered,0x0,1.5 # laptop screen
 # main dell monitor
+monitor = DP-1,2560x1440@144,auto,1
 monitor = DP-2,2560x1440@144,auto,1
 monitor = DP-4,2560x1440@144,auto,1
 # sam monitor
 # monitor = DP-3,1920x1080,auto,1
 # second monitor
-monitor = DP-1,preffered,0x0,1
 monitor = DP-5,preffered,0x0,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -40,7 +40,7 @@ device {
 
 device {
     name = syna2393:00-06cb:7a13-touchpad 
-        accel_profile = adaptive
+    accel_profile = adaptive
 }
 
 device {
