--- a/shared/.config/hypr/env.conf
+++ b/shared/.config/hypr/env.conf
@@ -1,6 +1,6 @@
-env=XCURSOR_SIZE,24
+env=HYPRCURSOR_THEME,Catppuccin-Mocha-Dark-Cursors
+env=HYPRCURSOR_SIZE,24
 env=XDG_CURRENT_DESKTOP,Hyprland
 env=XDG_SESSION_TYPE,wayland
 env=XDG_SESSION_DESKTOP,Hyprland
-env=WLR_NO_HARDWARE_CURSORS,1
 env=NIXOS_OZONE_WL,1
