--- a/shared/.config/hypr/startup.conf
+++ b/shared/.config/hypr/startup.conf
@@ -1,6 +1,7 @@
 # set cursor theme
-exec-once=hyprctl setcursor "Catppuccin-Macchiato-Dark-Cursors" 24
+exec-once=hyprctl setcursor "Catppuccin-Mocha-Dark-Cursors" 24
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=xsetroot -cursor_name left_ptr
 
 # disable middle click paste
 exec-once=wl-paste -p --watch wl-copy -pc
@@ -14,8 +15,8 @@ exec-once=sudo btmgmt le on
 # launch stuff
 exec-once=hyprpaper
 exec-once=eww daemon
-# exec-once=flameshot
 exec-once=QT_QPA_PLATFORM=xcb albert 
-# exec-once=eyes
+exec-once=solaar -w hide
+
 exec-once=~/.config/hypr/scripts/startup
 exec-once=~/.config/hypr/scripts/event-handlers
