tmux: leader-c/C open nvim chat

--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -117,10 +117,8 @@ bind-key N display-popup -E "tm new"
 bind-key S run-shell "tmux choose-session"
 bind-key t run-shell "toggleterm h"
 bind-key T run-shell "toggleterm v"
-bind-key ? run-shell 'tmux neww -n "ask" zsh -c "ask;zsh"'
-bind-key . run-shell "tmux display-popup -E cfgdirs tmux"
-# bind-key c split-window -v -c '#{pane_current_path}' 'nvim -c GpChatNew'
-bind-key c split-window -h -c '#{pane_current_path}' 'nvim -c GpChatNew'
+bind-key c split-window -h -c '#{pane_current_path}' 'nvim -c ChatNew'
+bind-key C new-window -c '#{pane_current_path}' 'nvim -c ChatNew'
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (cd ~/.dotfiles && lazygit)"
 bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
 
