tmux: tweak binds

--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -50,15 +50,16 @@ bind-key R source-file ~/.config/tmux/tmux.conf
 bind-key v split-window -h
 bind-key s split-window -v
 
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
+# bind-key J resize-pane -D 5
+# bind-key K resize-pane -U 5
+# bind-key H resize-pane -L 5
+# bind-key L resize-pane -R 5
 
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+bind-key -n M-J resize-pane -D 5
+bind-key -n M-K resize-pane -U 5
+bind-key -n M-H resize-pane -L 5
+bind-key -n M-L resize-pane -R 5
+
 
 bind-key -n M-h if-shell "$is_vim" "send-keys M-h" "select-pane -L"
 bind-key -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
@@ -78,8 +79,9 @@ bind-key C-l run-shell "tmux-swap-window right"
 # windows
 bind-key n new-window
 bind-key r command-prompt -I "#W" "rename-window '%%'"
-bind-key b break-pane
-bind-key B break-pane -d
+bind-key b break-pane -d
+bind-key j display-popup -E "tmux-join-window"
+bind-key J display-popup -E "tmux-join-window -v"
 
 bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
