tmux: name chat window chat

--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -120,7 +120,7 @@ bind-key S run-shell "tmux choose-session"
 bind-key t run-shell "toggleterm h"
 bind-key T run-shell "toggleterm v"
 bind-key c split-window -h -c '#{pane_current_path}' 'nvim -c ChatNew'
-bind-key C new-window -c '#{pane_current_path}' 'nvim -c ChatNew'
+bind-key C new-window -n chat -c '#{pane_current_path}' 'nvim -c ChatNew'
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (cd ~/.dotfiles && lazygit)"
 bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
 
