--- a/shared/.config/albert.conf
+++ b/shared/.config/albert.conf
@@ -1,6 +1,6 @@
 [General]
 frontend=widgetsboxmodel
-hotkey=Ctrl+Space
+hotkey=Ctrl+Alt+Shift+Space
 showTray=true
 telemetry=false
 terminal=Kitty
@@ -12,7 +12,7 @@ enabled=true
 enabled=true
 
 [clipboard]
-enabled=true
+enabled=false
 
 [files]
 enabled=true
@@ -41,4 +41,4 @@ showCentered=true
 showFallbacksOnEmpty=true
 systemShadow=true
 theme=Nord
-windowPosition=@Point(2517 216)
+windowPosition=@Point(597 216)
