--- a/shared/.config/hypr/startup.conf
+++ b/shared/.config/hypr/startup.conf
@@ -1,7 +1,7 @@
 # set cursor theme
-exec-once=hyprctl setcursor "Catppuccin-Mocha-Dark-Cursors" 24
+exec-once=hyprctl setcursor "Catppuccin-Mocha-Dark" 24
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=xsetroot -cursor_name left_ptr
+# exec-once=xsetroot -cursor_name left_ptr
 
 # disable middle click paste
 exec-once=wl-paste -p --watch wl-copy -pc
