kitty: remote control

--- a/shared/.config/kitty/kitty.conf
+++ b/shared/.config/kitty/kitty.conf
@@ -3,8 +3,8 @@ shell                   zsh -c 'tm startup; zsh'
 enable_audio_bell       no
 confirm_os_window_close 0
 
-# performance
 repaint_delay           5
+allow_remote_control    yes
 
 # window margin t r b l
 window_padding_width 0 0.5 0 0.5
