--- a/shared/.config/hypr/env.conf
+++ b/shared/.config/hypr/env.conf
@@ -6,3 +6,4 @@ env=XDG_CURRENT_DESKTOP,Hyprland
 env=XDG_SESSION_TYPE,wayland
 env=XDG_SESSION_DESKTOP,Hyprland
 env=NIXOS_OZONE_WL,1
+env=TZ,America/Toronto
