--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -38,10 +38,10 @@ bind = $mod SHIFT,      l,      resizeactive, 30 0
 bind = $mod SHIFT,      k,      resizeactive, 0 -30
 bind = $mod SHIFT,      j,      resizeactive, 0 30
 
-bind = $mod CONTROL,    h,      swapwindow, l
-bind = $mod CONTROL,    l,      swapwindow, r
-bind = $mod CONTROL,    k,      swapwindow, u
-bind = $mod CONTROL,    j,      swapwindow, d
+bind = $mod CONTROL,    h,      movewindow, l
+bind = $mod CONTROL,    l,      movewindow, r
+bind = $mod CONTROL,    k,      movewindow, u
+bind = $mod CONTROL,    j,      movewindow, d
 
 # scratchpads
 bind = $mod CONTROL,    $enter, exec, [workspace special:scratch]tm startup scratch
