--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -10,6 +10,7 @@ setw -g monitor-activity on
 set -g bell-action none
 set -g visual-bell off
 set -sg escape-time 0
+set -gq allow-passthrough on
 
 set -g set-clipboard external
 
@@ -87,32 +88,13 @@ bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
 bind-key Tab switch-client -l
 
-bind-key w choose-window
-bind-key -n "M-+" select-window -t 1
-bind-key -n "M-[" select-window -t 2
-bind-key -n "M-{" select-window -t 3
-bind-key -n "M-(" select-window -t 4
-bind-key -n "M-#" select-window -t 5
-bind-key -n "M-=" select-window -t 6
-bind-key -n "M-)" select-window -t 7
-bind-key -n "M-}" select-window -t 8
-bind-key -n "M-]" select-window -t 9
-bind-key -n "M-*" select-window -t 10
-bind-key "+" select-window -t 1
-bind-key "[" select-window -t 2
-bind-key "{" select-window -t 3
-bind-key "(" select-window -t 4
-bind-key "#" select-window -t 5
-bind-key "=" select-window -t 6
-bind-key ")" select-window -t 7
-bind-key "}" select-window -t 8
-bind-key "]" select-window -t 9
-bind-key "*" select-window -t 10
-
 bind-key f resize-pane -Z
 bind-key q run-shell "tm attach main; tm kill $(tmux display-message -p '#S')"
 bind-key Q kill-window
-bind-key w kill-pane
+
+# check if the tmux pane is called tt-*
+is_tt="tmux display-message -p '#{pane_title}' | grep -i 'tt-*'"
+bind-key w if-shell $is_tt "run-shell toggleterm" kill-pane
 
 bind-key Enter display-popup -E "tm"
 bind-key N display-popup -E "tm new"
