hypr: tweak layout

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -106,7 +106,6 @@ bind = $mod, t, exec, focusws 5
 # bind = $mod, i, exec, focusws 8
 # bind = $mod, o, exec, focusws 9
 # bind = $mod, p, exec, focusws 10
-
 bind = $mod SHIFT, q, movetoworkspacesilent, 1
 bind = $mod SHIFT, w, movetoworkspacesilent, 2
 bind = $mod SHIFT, e, movetoworkspacesilent, 3
@@ -127,95 +126,44 @@ binde = $mod, Down, moveactive, 0 30
 
 
 # --------------
-# General submap
+# Mod space submap
 # --------------
 bind=$mod, Space, submap, general
 submap=general
 # brightness
 bind=SHIFT,grave,exec,brightness set 2
 bind=,grave,exec,brightness set 5
-bind=,plus,exec,brightness set 10
-bind=,bracketleft,exec,brightness set 20
-bind=,braceleft,exec,brightness set 30
-bind=,parenleft,exec,brightness set 40
-bind=,numbersign,exec,brightness set 50
-bind=,equal,exec,brightness set 60
-bind=,parenright,exec,brightness set 70
-bind=,braceright,exec,brightness set 80
-bind=,bracketright,exec,brightness set 90
-bind=,asterisk,exec,brightness set 100
+bind=,1,exec,brightness set 10
+bind=,2,exec,brightness set 20
+bind=,3,exec,brightness set 30
+bind=,4,exec,brightness set 40
+bind=,5,exec,brightness set 50
+bind=,6,exec,brightness set 60
+bind=,7,exec,brightness set 70
+bind=,8,exec,brightness set 80
+bind=,9,exec,brightness set 90
+bind=,0,exec,brightness set 100
+
+bind=,k,exec,volume up
+bind=,j,exec,volume down
+
 # exit
 bind=SHIFT,grave,submap,reset
 bind=,grave,submap,reset
-bind=,plus,submap,reset
-bind=,bracketleft,submap,reset
-bind=,braceleft,submap,reset
-bind=,parenleft,submap,reset
-bind=,numbersign,submap,reset
-bind=,equal,submap,reset
-bind=,parenright,submap,reset
-bind=,braceright,submap,reset
-bind=,bracketright,submap,reset
-bind=,asterisk,submap,reset
+bind=,1,submap,reset
+bind=,2,submap,reset
+bind=,3,submap,reset
+bind=,4,submap,reset
+bind=,5,submap,reset
+bind=,6,submap,reset
+bind=,7,submap,reset
+bind=,8,submap,reset
+bind=,9,submap,reset
+bind=,0,submap,reset
 bind=,Escape,submap,reset 
 bind=,Caps_Lock,submap,reset 
 submap=reset
 
-# ---------
-# Comm apps
-# ---------
-# bind=$mod, c, submap, comm
-# submap=comm
-# # apps
-# bind=,s,exec,slack
-# # bind=,t,exec,teams
-# bind=,t,exec,[workspace 4]firefox --new-window "https://teams.microsoft.com"
-# bind=,d,exec,discord
-# # bind=,z,exec,zoom
-# bind=,z,exec,[workspace 4]firefox --new-window "https://zoom.us/meeting"
-# # exit
-# bind=,s,submap,reset
-# bind=,t,submap,reset
-# bind=,d,submap,reset
-# bind=,z,submap,reset
-# bind=,Escape,submap,reset 
-# bind=,Caps_Lock,submap,reset 
-# submap=reset
-
-# ---------------
-# Move and resize
-# ---------------
-# bind = $mod, m, submap, move
-# submap=move
-# # move
-# binde=,l,moveactive,10 0
-# binde=,h,moveactive,-10 0
-# binde=,k,moveactive,0 -10
-# binde=,j,moveactive,0 10
-# binde=SHIFT,l,moveactive,50 0
-# binde=SHIFT,h,moveactive,-50 0
-# binde=SHIFT,k,moveactive,0 -50
-# binde=SHIFT,j,moveactive,0 50
-# # resize
-# binde=CONTROL,l,resizeactive,20 0
-# binde=CONTROL,h,resizeactive,-20 0
-# binde=CONTROL,k,resizeactive,0 -20
-# binde=CONTROL,j,resizeactive,0 20
-# # splits
-# bind = ,r, togglesplit, # rotate
-# bind = ,f, splitratio, exact 1.5 # focus
-# bind = ,e, splitratio, exact 1 # even
-# bind = ,m, splitratio, exact 1.25 # main
-# bind = ,i, splitratio, exact 0.75 # inverse
-# # exit
-# bind=,r,submap,reset 
-# bind=,f,submap,reset 
-# bind=,e,submap,reset 
-# bind=,m,submap,reset 
-# bind=,i,submap,reset 
-# bind=,Escape,submap,reset 
-# bind=,Caps_Lock,submap,reset 
-# submap=reset
 
 # ------------------------------------------------------------------------------
 #                               Function keys
