--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -12,10 +12,10 @@ workspace=special:ask,gapsin:-50,gapsout:-50
 workspace=special:browser,gapsin:-50,gapsout:-50
 
 # Flameshot
-windowrule=suppressevent fullscreen,flameshot
-windowrule=float,flameshot
-windowrule=monitor 1,flameshot
-windowrule=move 0 0,flameshot
+# windowrule=suppressevent fullscreen,flameshot
+# windowrule=float,flameshot
+# windowrule=monitor 1,flameshot
+# windowrule=move 0 0,flameshot
 
 # Albert launcher
 # windowrule=nofullscreenrequest,albert
@@ -34,18 +34,19 @@ windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
 general {
-    gaps_in = 2
-    gaps_out = 5
+    layout = dwindle
 
-    border_size = 2
+    gaps_in = 2
+    gaps_out = 0
+
+    border_size = 0
     col.active_border = rgba(fab38755) rgba(f38ba855) 145deg
     col.inactive_border = rgba(000000a0)
 
-    layout = dwindle
 }
 
 decoration {
-    rounding = 10
+    rounding = 5
 
     active_opacity = 1.0
     inactive_opacity = 0.85
@@ -118,13 +119,12 @@ animations {
 dwindle {
     pseudotile = yes
     force_split = 2
-    preserve_split = yes
+    preserve_split = true
     special_scale_factor = 0.80
-    no_gaps_when_only = true
+    no_gaps_when_only = 0
 }
 
 master {
-    new_is_master = true
 }
 
 xwayland {
