--- a/shared/.config/albert.conf
+++ b/shared/.config/albert.conf
@@ -8,6 +8,9 @@ terminal=Kitty
 [applications_xdg]
 enabled=true
 
+[bitwarden]
+enabled=true
+
 [calculator_qalculate]
 enabled=true
 
@@ -17,6 +20,10 @@ enabled=false
 [files]
 enabled=true
 paths=@Invalid()
+
+[python]
+enabled=true
+watchSources=false
 
 [qmlboxmodel]
 windowPosition=@Point(2499 216)
