--- a/shared/.config/hypr/env.conf
+++ b/shared/.config/hypr/env.conf
@@ -1,6 +1,6 @@
-env=XCURSOR_THEME,Catppuccin-Mocha-Dark
+env=XCURSOR_THEME,Catppuccin-Mocha-Dark-Cursors
 env=XCURSOR_SIZE,24
-env=HYPRCURSOR_THEME,Catppuccin-Mocha-Dark
+env=HYPRCURSOR_THEME,Catppuccin-Mocha-Dark-Cursors
 env=HYPRCURSOR_SIZE,24
 env=XDG_CURRENT_DESKTOP,Hyprland
 env=XDG_SESSION_TYPE,wayland
