hypr: switch to chromium as main browser

--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -26,6 +26,15 @@ windowrule=noborder,albert
 windowrule=noshadow,albert
 windowrule=dimaround,albert
 
+# chromium
+windowrulev2=noanim,class:^$,title:^$
+windowrulev2=noblur,class:^$,title:^$
+windowrulev2=opacity 1.0 override 1.0 override,class:^$,title:^$
+windowrulev2=noblur,class:^Xdg-desktop-portal-gtk$
+windowrulev2=noanim,class:^Xdg-desktop-portal-gtk$
+windowrulev2=noborder,class:^Xdg-desktop-portal-gtk$
+windowrulev2=noshadow,class:^Xdg-desktop-portal-gtk$
+
 # Screenshare through xwaylandvideobridge
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
