--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -12,7 +12,8 @@ bind = $mod,            o,      exec,   albert show
 bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui
 bind = $mod CONTROL,    s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot full
 bind = $mod CONTROL,    e,      exec,   [float]nemo
-bind = $mod,            b,      exec,   firefox && sleep 0.5 && hyprctl dispatch fakefullscreen
+# bind = $mod,            b,      exec,   firefox && sleep 0.5 && hyprctl dispatch fakefullscreen
+bind = $mod,            b,      exec,   chromium
 bind = $mod SHIFT,      m,      exec,   focusws email
 bind = $mod CONTROL,    m,      exec,   focusws spotify
 bind = $mod SHIFT,      g,      exec,   firefox "https://github.com/e-cal"
