wezterm: switch to wezterm as main terminal

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -6,7 +6,7 @@ $enter = Return
 bind = $mod,            x,      killactive, 
 
 # open stuff
-bind = $mod,            $enter, exec,   kitty
+bind = $mod,            $enter, exec,   wezterm
 bind = $mod SHIFT,      $enter, exec,   albert show
 bind = $mod,            o,      exec,   albert show
 bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui
