--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "xterm-kitty"
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g history-limit 10000
 
@@ -10,7 +10,7 @@ setw -g monitor-activity on
 set -g bell-action none
 set -g visual-bell off
 set -sg escape-time 0
-set -gq allow-passthrough on
+set -g allow-passthrough on
 
 set -g set-clipboard external
 
