--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -8,7 +8,7 @@ set-option -g set-titles on
 set-option -g renumber-windows on
 setw -g monitor-activity on
 set -g bell-action none
-set -g visual-bell off
+set -g visual-bell on
 set -sg escape-time 0
 set -g allow-passthrough on
 
