hypr: chat popup

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -7,6 +7,7 @@ bind = $mod,            x,      killactive,
 
 # open stuff
 bind = $mod,            $enter, exec,   wezterm
+bind = $mod,            c,      exec,   wezterm start -- zsh -c 'nvim -c ChatNew' && sleep 0.1 && hyprctl --batch "dispatch setfloating; dispatch resizeactive 250 500; dispatch centerwindow"
 bind = $mod SHIFT,      $enter, exec,   albert show
 bind = $mod,            o,      exec,   albert show
 bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui
