--- a/shared/.config/hypr/startup.conf
+++ b/shared/.config/hypr/startup.conf
@@ -16,6 +16,7 @@ exec-once=sudo btmgmt le on
 exec-once=hyprpaper
 exec-once=eww daemon
 exec-once=QT_QPA_PLATFORM=xcb albert 
+exec-once=sleep 1 && albert show && sleep 0.1 && albert hide
 exec-once=solaar -w hide
 
 exec-once=~/.config/hypr/scripts/startup
