--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -1,3 +1,4 @@
+set -g default-terminal "xterm-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g history-limit 10000
@@ -13,6 +14,7 @@ set -sg escape-time 0
 set -g allow-passthrough on
 
 set -g set-clipboard external
+set -s copy-command 'wl-copy'
 
 # Key Bindings
 # prefix: C-Space
@@ -104,6 +106,5 @@ bind-key T run-shell "toggleterm v"
 bind-key c split-window -h -l 30% -c '#{pane_current_path}' 'nvim -c ChatNew'
 bind-key C new-window -n chat -c '#{pane_current_path}' 'nvim -c ChatNew'
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (cd ~/.dotfiles && lazygit)"
-bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
 
 run "$HOME/.config/tmux/theme"
