hypr: back to kitty default term

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -6,15 +6,18 @@ $enter = Return
 bind = $mod,            x,      killactive, 
 
 # open stuff
-bind = $mod,            $enter, exec,   wezterm
-bind = $mod,            c,      exec,   wezterm start -- zsh -c 'nvim -c ChatNew' && sleep 0.1 && hyprctl --batch "dispatch setfloating; dispatch resizeactive 250 500; dispatch centerwindow"
+bind = $mod,            $enter, exec,   kitty
+# bind = $mod,            c,      exec,   wezterm start -- zsh -c 'nvim -c ChatNew'
+bind = $mod,            c,      exec,   [float]kitty --hold sh -c "zsh -c 'nvim -c ChatNew'"
+bind = $mod,            c,      exec,   sleep 0.5 && hyprctl --batch "dispatch setfloating; dispatch resizeactive exact 33% 66%; dispatch centerwindow"
 bind = $mod SHIFT,      $enter, exec,   albert show
 bind = $mod,            o,      exec,   albert show
 bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui
 bind = $mod CONTROL,    s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot full
 bind = $mod CONTROL,    e,      exec,   [float]nemo
 # bind = $mod,            b,      exec,   firefox && sleep 0.5 && hyprctl dispatch fakefullscreen
-bind = $mod,            b,      exec,   chromium
+bind = $mod,            b,      exec,   chromium --profile-directory="Default"
+bind = $mod SHIFT,      b,      exec,   chromium --profile-directory="ta"
 bind = $mod SHIFT,      m,      exec,   focusws email
 bind = $mod CONTROL,    m,      exec,   focusws spotify
 bind = $mod SHIFT,      g,      exec,   firefox "https://github.com/e-cal"
