--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -26,6 +26,8 @@ windowrule=noborder,albert
 windowrule=noshadow,albert
 windowrule=dimaround,albert
 
+windowrule=noanim,qalculate-qt
+
 # chromium
 windowrulev2=noanim,class:^$,title:^$
 windowrulev2=noblur,class:^$,title:^$
