--- a/shared/.config/kitty/kitty.conf
+++ b/shared/.config/kitty/kitty.conf
@@ -17,12 +17,13 @@ window_padding_width 0 0.5 0 0.5
 # italic_font             FantasqueSansM Nerd Font Italic
 # bold_italic_font        FantasqueSansM Nerd Font Bold Italic
 
-font_family             JetBrainsMono NF Regular
+font_family             JetBrainsMono NF Medium
 bold_font               JetBrainsMono NF Bold
 italic_font             JetBrainsMono NF Italic
 bold_italic_font        JetBrainsMono NF Bold Italic
 
 font_features JetBrainsMonoNF-Regular +zero
+font_features JetBrainsMonoNF-Medium +zero
 font_features JetBrainsMonoNF-Bold +zero
 font_features JetBrainsMonoNF-Italic +zero
 font_features JetBrainsMonoNF-BoldItalic +zero
