hypr: add gromit overlay

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -8,7 +8,7 @@ bind = $mod,            x,      killactive,
 # open stuff
 bind = $mod,            $enter, exec,   kitty
 # bind = $mod,            c,      exec,   wezterm start -- zsh -c 'nvim -c ChatNew'
-bind = $mod,            c,      exec,   [float]kitty --hold sh -c "zsh -c 'nvim -c ChatNew'"
+bind = $mod,            c,      exec,   [float]kitty --hold sh -c "zsh -c 'nvim -c \"ChatOpen tmp.chat\"'"
 bind = $mod,            c,      exec,   sleep 0.5 && hyprctl --batch "dispatch setfloating; dispatch resizeactive exact 33% 66%; dispatch centerwindow"
 bind = $mod SHIFT,      $enter, exec,   albert show
 bind = $mod,            o,      exec,   albert show
@@ -23,6 +23,12 @@ bind = $mod CONTROL,    m,      exec,   focusws spotify
 bind = $mod SHIFT,      g,      exec,   firefox "https://github.com/e-cal"
 bind = $mod SHIFT,      c,      exec,   hyprpicker -a
 bind = $mod SHIFT,      n,      exec,   obsidian --disable-gpu
+bind = $mod SHIFT,      z,      exec,   zotero
+
+# bind = $mod ,      d,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui
+bind = $mod,            d,      togglespecialworkspace, gromit
+bind = $mod,            z,      exec,   gromit-mpx --undo
+bind = $mod,            y,      exec,   gromit-mpx --redo
 
 
 # Layout
