--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -1,3 +1,8 @@
+# Special Workspaces
+workspace=special:scratch,gapsin:-50,gapsout:-50
+workspace=special:ask,gapsin:-50,gapsout:-50
+workspace=special:browser,gapsin:-50,gapsout:-50
+
 # No opacity on media
 windowrule=suppressevent fullscreen,title:Picture\-in\-Picture
 windowrule=noblur,title:Picture\-in\-Picture
@@ -6,16 +11,19 @@ windowrule=opacity 1.0 override 1.0 override,title:.*YouTube.*
 windowrule=opacity 1.0 override 1.0 override,title:.*Twitch.*
 windowrule=opacity 1.0 override 1.0 override,title:.*S[0-9]+:E[0-9]+.* # tv
 
-# Special Workspaces
-workspace=special:scratch,gapsin:-50,gapsout:-50
-workspace=special:ask,gapsin:-50,gapsout:-50
-workspace=special:browser,gapsin:-50,gapsout:-50
-
 # Flameshot
 # windowrule=suppressevent fullscreen,flameshot
 # windowrule=float,flameshot
 # windowrule=monitor 1,flameshot
 # windowrule=move 0 0,flameshot
+
+# Gromit-mpx
+workspace=special:gromit, gapsin:0, gapsout:0, on-created-empty: gromit-mpx -a
+windowrule=noblur,Gromit-mpx
+windowrule=noshadow,Gromit-mpx
+windowrule=opacity 1.0 override 1.0 override,Gromit-mpx
+windowrule=suppressevent fullscreen,Gromit-mpx
+windowrule=size 100% 100%,Gromit-mpx
 
 # Albert launcher
 # windowrule=nofullscreenrequest,albert
@@ -26,7 +34,10 @@ windowrule=noborder,albert
 windowrule=noshadow,albert
 windowrule=dimaround,albert
 
-windowrule=noanim,qalculate-qt
+windowrule=float,qalculate-gtk
+windowrule=noanim,qalculate-gtk
+windowrule=opacity 1.0 override 1.0 override,qalculate-gtk
+windowrule=nodim,qalculate-gtk
 
 # chromium
 windowrulev2=noanim,class:^$,title:^$
@@ -70,9 +81,10 @@ decoration {
         contrast = 0.8916
         brightness = 0.8172
         ignore_opacity = false
-        special = true
+        special = false
         new_optimizations = true
     }
+    dim_special = 0.08
 
     drop_shadow = yes
     shadow_range = 4
